packages/beff-wasm/fixtures/errors/cannot-serialize-chain/types2.ts
export type B2 = () => void;
